# docker-qt

./: .gitignore  Dockerfile  Makefile  docker-qt.sh  readme.md
.github/workflows/: makefile.yml  submodule-update.yml
archlinux/: Dockerfile  Makefile
archlinux/tests/source/: main.cpp
debian/: Dockerfile  Makefile
debian/tests/: tests.sh
fedora/: Dockerfile  Makefile
template/: DockerImage.mk  DockerImages.mk
tests/: CMakeLists.txt  tests.sh
tests/qml/: main.qml
tests/source/: main.cpp
tools/: docker-save.sh
ubuntu/: Dockerfile  Makefile
ubuntu/tests/: CMakeLists.txt
